// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-address renders 1`] = `
<sc-address>
  <mock:shadow-root>
    <div class="sc-address">
      <sc-form-control class="sc-address__control" part="control">
        <sc-select autocomplete="country-name" name="shipping_country" placeholder="Country" search="" squared-bottom="" value="US"></sc-select>
        <sc-input autocomplete="street-address" name="shipping_line_1" placeholder="Address" squared=""></sc-input>
        <div class="sc-address__columns">
          <sc-input name="shipping_city" placeholder="City" squared="" squared-right="" squared-top="" style="margin-right: -1px;"></sc-input>
          <sc-input autocomplete="postal-code" maxlength="5" name="shipping_postal_code" placeholder="Postal Code/Zip" squared="" squared-left="" squared-top=""></sc-input>
        </div>
        <sc-select autocomplete="address-level1" name="shipping_state" placeholder="State/Province/Region" search="" squared-top=""></sc-select>
      </sc-form-control>
    </div>
  </mock:shadow-root>
</sc-address>
`;

exports[`sc-address renders CA address fields 1`] = `
<sc-address>
  <mock:shadow-root>
    <div class="sc-address">
      <sc-form-control class="sc-address__control" part="control">
        <sc-select autocomplete="country-name" name="shipping_country" placeholder="Country" search="" squared-bottom="" value="CA"></sc-select>
        <sc-input autocomplete="street-address" name="shipping_line_1" placeholder="Address" squared="" value="303 Park Ave"></sc-input>
        <div class="sc-address__columns">
          <sc-input name="shipping_city" placeholder="City" squared="" squared-right="" squared-top="" value="Monona" style="margin-right: -1px;"></sc-input>
          <sc-input autocomplete="postal-code" name="shipping_postal_code" placeholder="Postal Code/Zip" squared="" squared-left="" squared-top="" value="12345"></sc-input>
        </div>
        <sc-select autocomplete="address-level1" name="shipping_state" placeholder="State/Province/Region" search="" squared-top="" value="WI"></sc-select>
      </sc-form-control>
    </div>
  </mock:shadow-root>
</sc-address>
`;

exports[`sc-address renders EU address fields 1`] = `
<sc-address>
  <mock:shadow-root>
    <div class="sc-address">
      <sc-form-control class="sc-address__control" part="control">
        <sc-select autocomplete="country-name" name="shipping_country" placeholder="Country" search="" squared-bottom="" value="US"></sc-select>
        <sc-input autocomplete="street-address" name="shipping_line_1" placeholder="Address" squared="" value="303 Park Ave"></sc-input>
        <div class="sc-address__columns">
          <sc-input name="shipping_city" placeholder="City" squared="" squared-right="" squared-top="" value="Monona" style="margin-right: -1px;"></sc-input>
          <sc-input autocomplete="postal-code" maxlength="5" name="shipping_postal_code" placeholder="Postal Code/Zip" squared="" squared-left="" squared-top="" value="12345"></sc-input>
        </div>
        <sc-select autocomplete="address-level1" name="shipping_state" placeholder="State/Province/Region" search="" squared-top="" value="WI"></sc-select>
      </sc-form-control>
    </div>
  </mock:shadow-root>
</sc-address>
`;

exports[`sc-address renders US address fields 1`] = `
<sc-address>
  <mock:shadow-root>
    <div class="sc-address">
      <sc-form-control class="sc-address__control" part="control">
        <sc-select autocomplete="country-name" name="shipping_country" placeholder="Country" search="" squared-bottom="" value="US"></sc-select>
        <sc-input autocomplete="street-address" name="shipping_line_1" placeholder="Address" squared="" value="303 Park Ave"></sc-input>
        <div class="sc-address__columns">
          <sc-input name="shipping_city" placeholder="City" squared="" squared-right="" squared-top="" value="Monona" style="margin-right: -1px;"></sc-input>
          <sc-input autocomplete="postal-code" maxlength="5" name="shipping_postal_code" placeholder="Postal Code/Zip" squared="" squared-left="" squared-top="" value="12345"></sc-input>
        </div>
        <sc-select autocomplete="address-level1" name="shipping_state" placeholder="State/Province/Region" search="" squared-top="" value="WI"></sc-select>
      </sc-form-control>
    </div>
  </mock:shadow-root>
</sc-address>
`;

exports[`sc-address renders loading 1`] = `
<sc-address loading="true">
  <mock:shadow-root>
    <div class="sc-address">
      <sc-form-control class="sc-address__control" part="control">
        <sc-select autocomplete="country-name" name="shipping_country" placeholder="Country" search="" squared-bottom="" value="US"></sc-select>
        <sc-input autocomplete="street-address" name="shipping_line_1" placeholder="Address" squared=""></sc-input>
        <div class="sc-address__columns">
          <sc-input name="shipping_city" placeholder="City" squared="" squared-right="" squared-top="" style="margin-right: -1px;"></sc-input>
          <sc-input autocomplete="postal-code" maxlength="5" name="shipping_postal_code" placeholder="Postal Code/Zip" squared="" squared-left="" squared-top=""></sc-input>
        </div>
        <sc-select autocomplete="address-level1" name="shipping_state" placeholder="State/Province/Region" search="" squared-top=""></sc-select>
      </sc-form-control>
      <sc-block-ui></sc-block-ui>
    </div>
  </mock:shadow-root>
</sc-address>
`;
